feat: AI-generated changes — Update the Spring PetClinic Monolith. Add a new feature to t